--- a/src/DotNetCore.CAP.Sqlite/DotNetCore.CAP.Sqlite.csproj
+++ b/src/DotNetCore.CAP.Sqlite/DotNetCore.CAP.Sqlite.csproj
@@ -2,7 +2,7 @@
 
   <Import Project="..\..\build\common.props" />
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+	  <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>DotNetCore.CAP.Sqlite</AssemblyName>
     <PackageId>Cocosip.CAP.Sqlite</PackageId>
     <RootNamespace>DotNetCore.CAP.Sqlite</RootNamespace>
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetCore.CAP" Version="3.1.2" />
+    <PackageReference Include="DotNetCore.CAP" Version="7.0.3" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.9" />
