--- a/src/DotNetCore.CAP.Oracle/DotNetCore.CAP.Oracle.csproj
+++ b/src/DotNetCore.CAP.Oracle/DotNetCore.CAP.Oracle.csproj
@@ -1,27 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  
-  <Import Project="..\..\build\common.props" />
-  <PropertyGroup>
-	  <TargetFramework>net7.0</TargetFramework>
-    <AssemblyName>DotNetCore.CAP.Oracle</AssemblyName>
-    <PackageId>Cocosip.CAP.Oracle</PackageId>
-    <Description>Distributed transaction solution in micro-service base on eventually consistency, also an eventbus with Outbox pattern.</Description>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\DotNetCore.CAP.Oracle.xml</DocumentationFile>
-    <NoWarn>1701;1702;1705;CS1591</NoWarn>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="DotNetCore.CAP" Version="7.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.9" />
-    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.140" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="JetBrains.Annotations" Version="2020.3.0" />
-  </ItemGroup>
-
+    <Import Project="..\..\build\common.props" />
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <AssemblyName>DotNetCore.CAP.Oracle</AssemblyName>
+        <PackageId>DotNetCore.CAP.Oracle</PackageId>
+        <Description>Distributed transaction solution in micro-service base on eventually consistency, also an eventbus with Outbox pattern.</Description>
+    </PropertyGroup>
+    <PropertyGroup>
+        <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\DotNetCore.CAP.Oracle.xml</DocumentationFile>
+        <NoWarn>1701;1702;1705;CS1591</NoWarn>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="DotNetCore.CAP" Version="7.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.18" />
+        <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.120" />
+    </ItemGroup>
 </Project>
